manifests/media/tautulli/spec-patch.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: srv
spec:
  template:
    spec:
      containers:
      - name: srv

        image: linuxserver/tautulli
        ports:
        - containerPort: 8181
          name: http
          protocol: TCP

        # resources:
        #   requests:
        #     memory: 100Mi
        #     cpu: 50m
        #   limits:
        #     memory: 150Mi
        #     cpu: 1000m

        volumeMounts:
        - name: config
          mountPath: /config
        - name: plex-logs
          mountPath: /logs

      volumes:
      - name: config
        hostPath:
          path: /tank/data/tautulli
          type: Directory
      - name: plex-logs
        hostPath:
          path: /tank/data/plex/Logs
          type: Directory
