manifests/media/tautulli/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tautulli
spec:
  serviceName: tautulli
  volumeClaimTemplates: []
  replicas: 1
  updateStrategy:
    type: RollingUpdate

  template:
    metadata:
      annotations:
        vk.podman.io/systemd.tautulli: 'false'
        vk.podman.io/volume-selinux.config: relabel-private
    spec:

      nodeSelector:
        kubernetes.io/role: pet
        kubernetes.io/hostname: ausbox

      tolerations:
      - key: kubernetes.io/pet-node
        operator: Exists
        effect: NoSchedule

      containers:

      - name: tautulli
        image: linuxserver/tautulli

        ports:
        - containerPort: 8181
          name: http
          protocol: TCP

        resources:
          requests:
            memory: 100Mi
            cpu: 50m
          limits:
            memory: 150Mi
            cpu: 1000m

        volumeMounts:
        - name: config
          mountPath: /config
        - name: plex-logs
          mountPath: /logs

      volumes:
      - name: config
        hostPath:
          path: /tank/data/tautulli
          type: Directory
      - name: plex-logs
        hostPath:
          path: /tank/data/plex/Logs
          type: Directory
