manifests/media/tautulli/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tautulli
spec:
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: http
